--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: rgb(255,0,0);
+  --background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(0,0,0,1) 15%, rgba(0,0,0,1) 85%, rgba(255,0,0,1) 100%);
   --foreground: #171717;
 }
 
